--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
     margin: 0;
-    font-family: 'Fjalla One', sans-serif;
+    padding: 0;
+}
+
+body {
+    background-color: #f5cb42;
+    color: #e2ece9;
+    font-family: 'Gemunu Libre', sans-serif;
 }
 
 .main {
@@ -14,7 +18,10 @@
 }
 
 .main h1 {
+    text-align: center;
     margin-bottom: 2rem;
+    color: #343aeb;
+    ;
 }
 
 .main input {
@@ -26,8 +33,20 @@
 }
 
 #show-btn {
-    padding: 0.5rem 2rem;
+    margin-top: 0.5rem;
+    padding: 1rem 2rem;
+    font-size: 1rem;
     border-radius: 2rem;
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
+    cursor: pointer;
+    font-family: 'Gemunu Libre', sans-serif;
+}
+
+#show-btn:hover {
+    background-color: #dfe7fd;
+}
+
+#output {
+    margin-top: 1rem;
+    color: #343aeb;
+    font-size: larger;
 }
