--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     justify-content: center;
 }
 
-.main h1 {
+h1 {
     text-align: center;
     margin-bottom: 2rem;
     color: #343aeb;
